# pardes

./: Cargo.toml
pardes-core/: Cargo.toml
pardes-core/src/: lib.rs
pardes-core/src/samples/struture/simple_struct/: expected.rs  mod.rs  original.rs
pardes-core/src/samples/struture/tuple/: expected.rs  mod.rs  original.rs
pardes-core/src/struture/: core_generators.rs  error.rs  guard_generator.rs  guard_generators.rs  mod.rs  normalizer.rs  util.rs  wrapper_generators.rs
pardes-core/src/tests/: mod.rs  test_helpers.rs
pardes-core/src/tests/samples/: mod.rs
pardes-core/src/tests/samples/struture/: mod.rs
pardes-core/src/tests/samples/struture/simple_struct/: expected.rs  mod.rs  original.rs
pardes-core/src/tests/samples/struture/tuple/: expected.rs  mod.rs  original.rs
pardes-core/src/tests/struture/: check_generate_debug_impl_core_method.rs  core_generators.rs  guard_generators.rs  mod.rs  normalizer.rs  util.rs  wrapper_generators.rs
