[package]
edition = "2021"
name = "pardes"
version = "0.0.1"
authors = ["PFP <patrickfp93@gmail.com>"]
description = "A proc-macro capable of making a struct thread-safe."
license = "MIT"
repository = "https://github.com/patrickfp93/warcrwlock"
keywords = ["lazy","async","thread-safe","macro","attribute"]


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.26", features = ["full"] }

[package.metadata.doc]
index = "./readme.md"

